generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h

//-----------------------------------------------------------------------------
// [SECTION] Forward declarations and basic types
// Auto-generated forward declarations for C header
typedef struct ImVec2_t ImVec2;
//-----------------------------------------------------------------------------

// Scalar data types
typedef unsigned int ImGuiID;      // A unique ID used by widgets (typically the result of hashing a stack of string)
typedef signed long long ImS64;    // 64-bit signed integer
typedef struct ImGuiSizeCallbackData_t ImGuiSizeCallbackData;                  // Callback data when using SetNextWindowSizeConstraints() (rare/advanced use)
typedef struct ImGuiStorage_t ImGuiStorage;                                    // Helper for key->value storage (container sorted by key)
typedef int ImGuiKey;             // -> enum ImGuiKey              // Enum: A key identifier (ImGuiKey_XXX or ImGuiMod_XXX value)
typedef int ImGuiCond;            // -> enum ImGuiCond_            // Enum: A condition for many Set*() functions
typedef int ImGuiMouseCursor;     // -> enum ImGuiMouseCursor_     // Enum: A mouse cursor shape
typedef int ImGuiInputFlags;        // -> enum ImGuiInputFlags_      // Flags: for Shortcut(), SetNextItemShortcut()
typedef int ImGuiKeyChord;          // -> ImGuiKey | ImGuiMod_XXX    // Flags: for IsKeyChordPressed(), Shortcut() etc. an ImGuiKey optionally OR-ed with one or more ImGuiMod_XXX values.
// Multi-Selection item index or identifier when using BeginMultiSelect()
// - Used by SetNextItemSelectionUserData() + and inside ImGuiMultiSelectIO structure.
// - Most users are likely to use this store an item INDEX but this may be used to store a POINTER/ID as well. Read comments near ImGuiMultiSelectIO for details.
typedef ImS64 ImGuiSelectionUserData;
typedef void (*ImGuiSizeCallback)(ImGuiSizeCallbackData* data);           // Callback function for ImGui::SetNextWindowSizeConstraints()
CIMGUI_API void ImGui_SetNextWindowCollapsed(bool collapsed, ImGuiCond cond /* = 0 */);                           // set next window collapsed state. call before Begin()
CIMGUI_API void ImGui_SetNextWindowFocus(void);                                                                   // set next window to be focused / top-most. call before Begin()
CIMGUI_API void ImGui_SetNextWindowBgAlpha(float alpha);                                                          // set next window background color alpha. helper to easily override the Alpha component of ImGuiCol_WindowBg/ChildBg/PopupBg. you may also use ImGuiWindowFlags_NoBackground.
CIMGUI_API void ImGui_SetWindowCollapsed(bool collapsed, ImGuiCond cond /* = 0 */);                               // (not recommended) set current window collapsed state. prefer using SetNextWindowCollapsed().
CIMGUI_API void ImGui_SetWindowFocus(void);                                                                       // (not recommended) set current window to be focused / top-most. prefer using SetNextWindowFocus().
CIMGUI_API void ImGui_SetWindowCollapsedStr(const char* name, bool collapsed, ImGuiCond cond /* = 0 */);          // set named window collapsed state
CIMGUI_API void ImGui_SetWindowFocusStr(const char* name);                                                        // set named window to be focused / top-most. use NULL to remove focus.
CIMGUI_API void  ImGui_SetScrollX(float scroll_x);                                           // set scrolling amount [0 .. GetScrollMaxX()]
CIMGUI_API void  ImGui_SetScrollY(float scroll_y);                                           // set scrolling amount [0 .. GetScrollMaxY()]
CIMGUI_API void  ImGui_SetScrollHereX(float center_x_ratio /* = 0.5f */);                    // adjust scrolling amount to make current cursor position visible. center_x_ratio=0.0: left, 0.5: center, 1.0: right. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
CIMGUI_API void  ImGui_SetScrollHereY(float center_y_ratio /* = 0.5f */);                    // adjust scrolling amount to make current cursor position visible. center_y_ratio=0.0: top, 0.5: center, 1.0: bottom. When using to make a "default/current item" visible, consider using SetItemDefaultFocus() instead.
CIMGUI_API void  ImGui_SetScrollFromPosX(float local_x, float center_x_ratio /* = 0.5f */);  // adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
CIMGUI_API void  ImGui_SetScrollFromPosY(float local_y, float center_y_ratio /* = 0.5f */);  // adjust scrolling amount to make given position visible. Generally GetCursorStartPos() + offset to compute a valid position.
CIMGUI_API void  ImGui_SetNextItemWidth(float item_width);                    // set width of the _next_ common large "item+label" widget. >0.0f: width in pixels, <0.0f align xx pixels to the right of window (so -FLT_MIN always align width to the right side)
CIMGUI_API void   ImGui_SetCursorPosX(float local_x);    // [window-local] "
CIMGUI_API void   ImGui_SetCursorPosY(float local_y);    // [window-local] "
CIMGUI_API void  ImGui_SetNextItemOpen(bool is_open, ImGuiCond cond /* = 0 */);                                                 // set next TreeNode/CollapsingHeader open state.
CIMGUI_API void  ImGui_SetNextItemStorageID(ImGuiID storage_id);                                                                // set id to use for open/close storage (default to same as item id).
CIMGUI_API void                ImGui_SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data);
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
CIMGUI_API void ImGui_SetTabItemClosed(const char* tab_or_docked_window_label);             // notify TabBar or Docking system of a closed tab/window ahead (useful to reduce visual flicker on reorderable tab bars). For tab-bar: call after BeginTabBar() and before Tab submissions. Otherwise call with a window name.
CIMGUI_API bool                ImGui_SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond /* = 0 */); // type is a user defined string of maximum 32 characters. Strings starting with '_' are reserved for dear imgui internal types. Data is copied and held by imgui. Return true when payload has been accepted.
// Focus, Activation
CIMGUI_API void ImGui_SetItemDefaultFocus(void);                   // make last item the default focused item of a newly appearing window.
CIMGUI_API void ImGui_SetKeyboardFocusHere(int offset /* = 0 */);  // focus keyboard on the next widget. Use positive 'offset' to access sub components of a multiple component widget. Use -1 to access previous widget.
// Keyboard/Gamepad Navigation
CIMGUI_API void ImGui_SetNavCursorVisible(bool visible);  // alter visibility of keyboard/gamepad cursor. by default: show when using an arrow key, hide when clicking with mouse.
// Overlapping mode
CIMGUI_API void ImGui_SetNextItemAllowOverlap(void);  // allow next item to be overlapped by a subsequent item. Typically useful with InvisibleButton(), Selectable(), TreeNode() covering an area where subsequent items may need to be added. Note that both Selectable() and TreeNode() have dedicated flags doing this.
CIMGUI_API void                  ImGui_SetStateStorage(ImGuiStorage* storage);           // replace current window storage with our own (if you want to manipulate it yourself, typically clear subsection of it)
CIMGUI_API void        ImGui_SetNextFrameWantCaptureKeyboard(bool want_capture_keyboard);        // Override io.WantCaptureKeyboard flag next frame (said flag is left for your application to handle, typically when true it instructs your app to ignore inputs). e.g. force capture keyboard when your widget is being hovered. This is equivalent to setting "io.WantCaptureKeyboard = want_capture_keyboard"; after the next NewFrame() call.
CIMGUI_API void ImGui_SetNextItemShortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags /* = 0 */);
// Inputs Utilities: Key/Input Ownership [BETA]
// - One common use case would be to allow your items to disable standard inputs behaviors such
//   as Tab or Alt key handling, Mouse Wheel scrolling, etc.
//   e.g. Button(...); SetItemKeyOwner(ImGuiKey_MouseWheelY); to make hovering/activating a button disable wheel for scrolling.
// - Reminder ImGuiKey enum include access to mouse buttons and gamepad, so key ownership can apply to them.
// - Many related features are still in imgui_internal.h. For instance, most IsKeyXXX()/IsMouseXXX() functions have an owner-id-aware version.
CIMGUI_API void ImGui_SetItemKeyOwner(ImGuiKey key);  // Set key owner to last item ID if it is hovered or active. Equivalent to 'if (IsItemHovered() || IsItemActive()) { SetKeyOwner(key, GetItemID());'.
CIMGUI_API void             ImGui_SetMouseCursor(ImGuiMouseCursor cursor_type);                                              // set desired mouse cursor shape
CIMGUI_API void             ImGui_SetNextFrameWantCaptureMouse(bool want_capture_mouse);                                     // Override io.WantCaptureMouse flag next frame (said flag is left for your application to handle, typical when true it instructs your app to ignore inputs). This is equivalent to setting "io.WantCaptureMouse = want_capture_mouse;" after the next NewFrame() call.
// Helper: Key->Value storage
// Typically you don't have to worry about this since a storage is held within each Window.
// We use it to e.g. store collapse state for a tree (Int 0/1)
// This is optimized for efficient lookup (dichotomy into a contiguous buffer) and rare insertion (typically tied to user interactions aka max once a frame)
// You can use it as custom user storage for temporary values. Declare your own storage if, for example:
// - You want to manipulate the open/close state of a particular sub-tree in your interface (tree node uses Int 0/1 to store their state).
// - You want to store custom debug data easily without adding or editing structures in your code (probably not efficient, but convenient)
// Types are NOT stored, so it is up to you to make sure your Key don't collide with different types.
struct ImGuiStorage_t
{
    // [Internal]
    ImVector_ImGuiStoragePair Data;
};
CIMGUI_API void   ImGui_SetWindowFontScale(float scale);  // Set font scale factor for current window. Prefer using PushFont(NULL, style.FontSizeBase * factor) or use style.FontScaleMain to scale all windows.