generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_SetCursorScreenPos_wrap(ImVec2 const* pos);
void ImGui_SetNextWindowContentSize_wrap(ImVec2 const* size);
void ImGui_SetNextWindowPos_wrap(ImVec2 const* pos, ImGuiCond cond, ImVec2 const* pivot);
void ImGui_SetNextWindowScroll_wrap(ImVec2 const* scroll);
void ImGui_SetNextWindowSize_wrap(ImVec2 const* size, ImGuiCond cond);
void ImGui_SetNextWindowSizeConstraints_wrap(ImVec2 const* size_min, ImVec2 const* size_max, ImGuiSizeCallback custom_callback, void* custom_callback_data);
void ImGui_SetWindowPos_wrap(ImVec2 const* pos, ImGuiCond cond);
void ImGui_SetWindowPosStr_wrap(const char* name, ImVec2 const* pos, ImGuiCond cond);
void ImGui_SetWindowSize_wrap(ImVec2 const* size, ImGuiCond cond);
void ImGui_SetWindowSizeStr_wrap(const char* name, ImVec2 const* size, ImGuiCond cond);