generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


-- C: void ImGui::SetCursorPosX(float local_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetCursorPosX"
  imGui_SetCursorPosX :: CFloat -> IO ()
-- C: void ImGui::SetCursorPosY(float local_y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetCursorPosY"
  imGui_SetCursorPosY :: CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetCursorScreenPos_wrap"
  c_imGui_SetCursorScreenPos :: (Ptr ImVec2) -> IO ()

imGui_SetCursorScreenPos :: ImVec2 -> IO ()
imGui_SetCursorScreenPos pos =
  with pos $ \_p0 -> c_imGui_SetCursorScreenPos _p0

-- C: bool ImGui::SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetDragDropPayload"
  imGui_SetDragDropPayload :: CString -> (Ptr ()) -> CSize -> ImGuiCond -> IO CBool
-- C: void ImGui::SetItemDefaultFocus()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetItemDefaultFocus"
  imGui_SetItemDefaultFocus :: IO ()
-- C: void ImGui::SetItemKeyOwner(ImGuiKey key)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetItemKeyOwner"
  imGui_SetItemKeyOwner :: ImGuiKey -> IO ()
-- C: void ImGui::SetKeyboardFocusHere(int offset)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetKeyboardFocusHere"
  imGui_SetKeyboardFocusHere :: CInt -> IO ()
-- C: void ImGui::SetMouseCursor(ImGuiMouseCursor cursor_type)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetMouseCursor"
  imGui_SetMouseCursor :: ImGuiMouseCursor -> IO ()
-- C: void ImGui::SetNavCursorVisible(bool visible)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNavCursorVisible"
  imGui_SetNavCursorVisible :: CBool -> IO ()
-- C: void ImGui::SetNextFrameWantCaptureKeyboard(bool want_capture_keyboard)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextFrameWantCaptureKeyboard"
  imGui_SetNextFrameWantCaptureKeyboard :: CBool -> IO ()
-- C: void ImGui::SetNextFrameWantCaptureMouse(bool want_capture_mouse)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextFrameWantCaptureMouse"
  imGui_SetNextFrameWantCaptureMouse :: CBool -> IO ()
-- C: void ImGui::SetNextItemAllowOverlap()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemAllowOverlap"
  imGui_SetNextItemAllowOverlap :: IO ()
-- C: void ImGui::SetNextItemOpen(bool is_open, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemOpen"
  imGui_SetNextItemOpen :: CBool -> ImGuiCond -> IO ()
-- C: void ImGui::SetNextItemSelectionUserData(ImGuiSelectionUserData selection_user_data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemSelectionUserData"
  imGui_SetNextItemSelectionUserData :: ImGuiSelectionUserData -> IO ()
-- C: void ImGui::SetNextItemShortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemShortcut"
  imGui_SetNextItemShortcut :: ImGuiKeyChord -> ImGuiInputFlags -> IO ()
-- C: void ImGui::SetNextItemStorageID(ImGuiID storage_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemStorageID"
  imGui_SetNextItemStorageID :: ImGuiID -> IO ()
-- C: void ImGui::SetNextItemWidth(float item_width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextItemWidth"
  imGui_SetNextItemWidth :: CFloat -> IO ()
-- C: void ImGui::SetNextWindowBgAlpha(float alpha)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowBgAlpha"
  imGui_SetNextWindowBgAlpha :: CFloat -> IO ()
-- C: void ImGui::SetNextWindowClass(const ImGuiWindowClass* window_class)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowClass"
  imGui_SetNextWindowClass :: (Ptr ImGuiWindowClass) -> IO ()
-- C: void ImGui::SetNextWindowCollapsed(bool collapsed, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowCollapsed"
  imGui_SetNextWindowCollapsed :: CBool -> ImGuiCond -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetNextWindowContentSize_wrap"
  c_imGui_SetNextWindowContentSize :: (Ptr ImVec2) -> IO ()

imGui_SetNextWindowContentSize :: ImVec2 -> IO ()
imGui_SetNextWindowContentSize size =
  with size $ \_p0 -> c_imGui_SetNextWindowContentSize _p0

-- C: void ImGui::SetNextWindowDockID(ImGuiID dock_id, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowDockID"
  imGui_SetNextWindowDockID :: ImGuiID -> ImGuiCond -> IO ()
-- C: void ImGui::SetNextWindowFocus()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowFocus"
  imGui_SetNextWindowFocus :: IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetNextWindowPos_wrap"
  c_imGui_SetNextWindowPos :: (Ptr ImVec2) -> ImGuiCond -> (Ptr ImVec2) -> IO ()

imGui_SetNextWindowPos :: ImVec2 -> ImGuiCond -> ImVec2 -> IO ()
imGui_SetNextWindowPos pos cond pivot =
  with pos $ \_p0 -> with pivot $ \_p2 -> c_imGui_SetNextWindowPos _p0 cond _p2

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetNextWindowScroll_wrap"
  c_imGui_SetNextWindowScroll :: (Ptr ImVec2) -> IO ()

imGui_SetNextWindowScroll :: ImVec2 -> IO ()
imGui_SetNextWindowScroll scroll =
  with scroll $ \_p0 -> c_imGui_SetNextWindowScroll _p0

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetNextWindowSize_wrap"
  c_imGui_SetNextWindowSize :: (Ptr ImVec2) -> ImGuiCond -> IO ()

imGui_SetNextWindowSize :: ImVec2 -> ImGuiCond -> IO ()
imGui_SetNextWindowSize size cond =
  with size $ \_p0 -> c_imGui_SetNextWindowSize _p0 cond

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetNextWindowSizeConstraints_wrap"
  c_imGui_SetNextWindowSizeConstraints :: (Ptr ImVec2) -> (Ptr ImVec2) -> ImGuiSizeCallback -> (Ptr ()) -> IO ()

imGui_SetNextWindowSizeConstraints :: ImVec2 -> ImVec2 -> ImGuiSizeCallback -> (Ptr ()) -> IO ()
imGui_SetNextWindowSizeConstraints size_min size_max custom_callback custom_callback_data =
  with size_min $ \_p0 -> with size_max $ \_p1 -> c_imGui_SetNextWindowSizeConstraints _p0 _p1 custom_callback custom_callback_data

-- C: void ImGui::SetNextWindowViewport(ImGuiID viewport_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetNextWindowViewport"
  imGui_SetNextWindowViewport :: ImGuiID -> IO ()
-- C: void ImGui::SetScrollFromPosX(float local_x, float center_x_ratio)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollFromPosX"
  imGui_SetScrollFromPosX :: CFloat -> CFloat -> IO ()
-- C: void ImGui::SetScrollFromPosY(float local_y, float center_y_ratio)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollFromPosY"
  imGui_SetScrollFromPosY :: CFloat -> CFloat -> IO ()
-- C: void ImGui::SetScrollHereX(float center_x_ratio)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollHereX"
  imGui_SetScrollHereX :: CFloat -> IO ()
-- C: void ImGui::SetScrollHereY(float center_y_ratio)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollHereY"
  imGui_SetScrollHereY :: CFloat -> IO ()
-- C: void ImGui::SetScrollX(float scroll_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollX"
  imGui_SetScrollX :: CFloat -> IO ()
-- C: void ImGui::SetScrollY(float scroll_y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetScrollY"
  imGui_SetScrollY :: CFloat -> IO ()
-- C: void ImGui::SetStateStorage(ImGuiStorage* storage)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetStateStorage"
  imGui_SetStateStorage :: (Ptr ImGuiStorage) -> IO ()
-- C: void ImGui::SetTabItemClosed(const char* tab_or_docked_window_label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetTabItemClosed"
  imGui_SetTabItemClosed :: CString -> IO ()
-- C: void ImGui::SetWindowCollapsed(bool collapsed, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetWindowCollapsed"
  imGui_SetWindowCollapsed :: CBool -> ImGuiCond -> IO ()
-- C: void ImGui::SetWindowCollapsed(const char* name, bool collapsed, ImGuiCond cond)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetWindowCollapsedStr"
  imGui_SetWindowCollapsedStr :: CString -> CBool -> ImGuiCond -> IO ()
-- C: void ImGui::SetWindowFocus()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetWindowFocus"
  imGui_SetWindowFocus :: IO ()
-- C: void ImGui::SetWindowFocus(const char* name)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetWindowFocusStr"
  imGui_SetWindowFocusStr :: CString -> IO ()
-- C: void ImGui::SetWindowFontScale(float scale)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetWindowFontScale"
  imGui_SetWindowFontScale :: CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetWindowPos_wrap"
  c_imGui_SetWindowPos :: (Ptr ImVec2) -> ImGuiCond -> IO ()

imGui_SetWindowPos :: ImVec2 -> ImGuiCond -> IO ()
imGui_SetWindowPos pos cond =
  with pos $ \_p0 -> c_imGui_SetWindowPos _p0 cond

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetWindowPosStr_wrap"
  c_imGui_SetWindowPosStr :: CString -> (Ptr ImVec2) -> ImGuiCond -> IO ()

imGui_SetWindowPosStr :: CString -> ImVec2 -> ImGuiCond -> IO ()
imGui_SetWindowPosStr name pos cond =
  with pos $ \_p1 -> c_imGui_SetWindowPosStr name _p1 cond

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetWindowSize_wrap"
  c_imGui_SetWindowSize :: (Ptr ImVec2) -> ImGuiCond -> IO ()

imGui_SetWindowSize :: ImVec2 -> ImGuiCond -> IO ()
imGui_SetWindowSize size cond =
  with size $ \_p0 -> c_imGui_SetWindowSize _p0 cond

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetWindowSizeStr_wrap"
  c_imGui_SetWindowSizeStr :: CString -> (Ptr ImVec2) -> ImGuiCond -> IO ()

imGui_SetWindowSizeStr :: CString -> ImVec2 -> ImGuiCond -> IO ()
imGui_SetWindowSizeStr name size cond =
  with size $ \_p1 -> c_imGui_SetWindowSizeStr name _p1 cond
